--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <title>portofolio</title>
+    <title>portofolio | Said</title>
 </head>
 
 <body>
@@ -26,7 +26,7 @@
                     <img src="profil.jpeg" alt="" />
                 </div>
                 <h1 class="sapa">hallo</h1>
-                <p>perkenalkan nama saya ismail, saya adalah di salah satu mahasiswa perguruan tinggi cirebon, lebih tepatnya kampus Stmik ikmi cirebon. Saya mengambil jurusan teknik informasika, hobi saya adalah membaca hiking.</p>
+                <p>perkenalkan nama saya said, saya adalah di salah satu mahasiswa perguruan tinggi cirebon, lebih tepatnya kampus Stmik ikmi cirebon. Saya mengambil jurusan teknik informasika, hobi saya adalah membaca novel.</p>
         </div>
         </center>
         <div class="about">
@@ -36,8 +36,8 @@
             </div>
             <div class="isi">
                 <div class="biodata">
-                    <h3>Nama : Muhammad Ismail Marzuki</h3>
-                    <h3>Nim : 41226084</h3>
+                    <h3>Nama : Mohamad Said</h3>
+                    <h3>Nim : 41226080</h3>
                     <h3>Prodi :Teknik Informatika</h3>
                     <p class="p1"></p>
                     <p><a href="#navigasi" class="tombol">balik</a></p>
